--- a/tex/exp-overall.tex
+++ b/tex/exp-overall.tex
@@ -64,8 +64,8 @@
 \noindent \textbf{Model generation quality.}
 Figure~\ref{fig:overall_acc} illustrates the impact of different systems on model generation quality at various prefix KV retention ratios. 
 As ReComp and AS-like share the same accuracy, and AS+H2O+LRU and AS+H2O+LFU also show identical accuracy, we present only the accuracy of ReComp, AS+H2O+LRU, and \pname{} for simplicity.
-\zrdnew{It shows that \pname{} has a negligible impact on accuracy across these datasets
-and models, achieving accuracy drop less than 1\% compared to ReComp or AS+H2O+LRU}. In
+It shows that \pname{} has a negligible impact on accuracy across these datasets
+and models, achieving accuracy drop less than 1\% compared to ReComp or AS+H2O+LRU. In
 some cases, \pname{} even slightly improves accuracy over ReComp, suggesting
 that focusing on more important tokens can sometimes enhance generation quality.
 
