--- a/tex/design.tex
+++ b/tex/design.tex
@@ -2,11 +2,11 @@
 \label{design_mainpart}
 \zrdnew{In this section, we present \pname{}, an importance-informed three-tiered prefix KV caching and prefetching system.}
 %We first introduce the system overview of SPEC and then elaborate on its three key components.}
-First, we describe the overall architecture of \pname{} (\cref{sec:overview}). 
-\zrdnew{Then, we introduce an I/O-efficient technique to identify important tokens (\cref{sec:techa}). 
-Furthermore, we propose a prefetching technique to mitigate I/O bottlenecks by overlapping computation and I/Os ({\cref{sec:technew}})}.
+First, we describe the overall architecture of \pname{} (\S\ref{sec:overview}). 
+\zrdnew{Then, we introduce an I/O-efficient technique to identify important tokens (\S\ref{sec:techa}). 
+Furthermore, we propose a prefetching technique to mitigate I/O bottlenecks by overlapping computation and I/Os ({\S \ref{sec:technew}})}.
 Finally, we explain how prefix KVs are managed across three storage tiers 
-to further reduce the latency when loading them into GPU memory (\cref{sec:techb}).
+to further reduce the latency when loading them into GPU memory (\S\ref{sec:techb}).
 
 \subsection{Overview}
 \label{sec:overview}
@@ -14,26 +14,38 @@ to further reduce the latency when loading them into GPU memory (\cref{sec:techb
 
 
 
-We propose \pname{} to provide large storage capacity for prefix KVs while
-ensuring efficient I/O accesses to reduce TTFT. The system is designed based on
-three principles: (1) Using a minimal number of I/Os to identify the
-important KVs within a prefix, allowing only the essential KVs to be loaded
-during the prefill phase; 
-\cp{(2) Since the I/Os for loading essential KVs lie on the critical path, we introduce data prefetching during model computation to mitigate the I/O overhead.}
-(3) Since loading only important KVs could degrade
-the efficiency of existing storage and caching systems, we optimize the
-three-tiered prefix KV management to improve cache hit
-ratios and I/O efficiency.
+%We propose \pname{} to provide large storage capacity for prefix KVs while
+%ensuring efficient I/O accesses to reduce TTFT. The system is designed based on
+%three principles: (1) Using a minimal number of I/Os to identify the
+%important KVs within a prefix, allowing only the essential KVs to be loaded
+%during the prefill phase; 
+%\cp{(2) Since the I/Os for loading essential KVs lie on the critical path, we introduce data prefetching during model computation to mitigate the I/O overhead.}
+%(3) Since loading only important KVs could degrade
+%the efficiency of existing storage and caching systems, we optimize the
+%three-tiered prefix KV management to improve cache hit
+%ratios and I/O efficiency.
+\zrdnew{To address the challenges outlined in \S\ref{motiv}, \pname{} is designed based on three core principles: 
+(1) employing an I/O-efficient method to identify important KVs, ensuring only essential data is loaded during the prefill phase; 
+(2) utilizing latency hiding via prefetching, where the system speculatively loads data for future layers to mitigate I/O overhead on the critical path; and 
+(3) optimizing tiered storage management to improve cache hit ratios and I/O efficiency.}
 
-\cp{Figure~\ref{fig:overview} illustrates the overall architecture of \pname{}, which consists of a data plane responsible for KV storage and a control plane that governs runtime data movement and computation scheduling.
-In the data plane, all prefix key–value (KV) pairs are stored on disks in chunked form, while selected KVs are cached in either CPU or GPU memory. The two cache spaces are mutually exclusive to prevent redundancy. To mitigate I/O latency, essential KVs are prefetched during model computation to overlap data transfer with inference execution.}
-
-\cp{The control plane manages GPU inference and includes three core modules: important token filtering (\cref{sec:techa}), data prefetching (\cref{sec:technew}), and prefix KV placement (\cref{sec:techb}). The token filtering module loads only a subset of key vectors to identify important tokens, reducing disk I/Os. The prefetching module proactively loads critical KVs during computation to hide I/O overhead. The KV placement module manages KV distribution across disks, CPU memory, and GPU memory to maximize cache efficiency and eliminate redundancy.}
+Figure~\ref{fig:overview} presents the overall architecture of \pname{}. 
+% It consists of a data plane and two control components.
+In the data plane, all prefix KVs are stored on disks in chunks, with some
+prefix KVs cached in either CPU memory or GPU memory. The data in the two cache
+spaces are exclusive to avoid space wastage. The metadata in the CPU memory is
+organized using a radix tree~\cite{sglang-arxiv23}, which facilitates quick
+searches for the reusable prefix KVs. The runtime space stores
+model parameters and intermediate data needed for GPU inference.
+\zrdnew{\pname{} has three control components: important token identification (\S\ref{sec:techa}), layer-aware KV prefetching (\S\ref{sec:technew}), and prefix KV placement (\S\ref{sec:techb}). 
+The token identification module identifies important tokens within a chunk by loading only partial keys rather than all of them, reducing the amount of data loaded from disks. 
+The prefetching module proactively loads critical KVs for future layers during current computation to hide I/O overhead.
+The KV placement module manages the storage and data movement of prefix KVs across disks and the two cache spaces to maximize cache efficiency.}
 
 \begin{figure}
 	\centering
 	\includegraphics[width=3.3in]{overview.pdf}
-	\caption{\cp{Overview of the \pname{} system.}}
+	\caption{\zrdnew{Overview of the \pname{} system.}}
 	\label{fig:overview}
 	\vspace{-0.2in}
 \end{figure}
@@ -53,22 +65,32 @@ In the data plane, all prefix key–value (KV) pairs are stored on disks in chun
 %Both the important KVs and any incorrectly prefetched KVs are passed to the LLM for computation, whereas other KVs of unimportant tokens in $R$ are discarded and do not participate in subsequent inference. 
 %Then, the loaded $R_{\text{important}}$ and the query tokens enter the LLM model, completing the remaining computations in the prefill phase. 
 %The decoding phase remains unchanged, following existing systems~\cite{alluneed-nips17}.}
-
-\noindent \textbf{Dataflow of \pname{}.} 
-\zrdnew{Assume that a request $S=[t^p_0, t^p_1, ..., t^p_{m-1}, t^q_0, t^q_1, ..., t^q_{n-1}]$ arrives. 
-$m$ is the number of tokens in the prefix and $n$ is the number of tokens in the query. 
-$t^p$ and $t^q$ denote the prefix and non-prefix tokens, respectively. 
-First, given the request, \pname{} searches the radix tree to find the longest common prefix subsequence from all previous requests~\cite{sglang-arxiv23, chunkattention-arxiv24}. 
-Let's assume the result is $R = [t^p_0, t^p_1, ..., t^p_j]$, whose KVs are stored in GPU memory, CPU memory, or disk. 
-There may also be some prefix tokens $NR = [t^p_{j+1}, ..., t^p_{m-1}]$ that are not in the radix tree, and therefore their KVs do not exist in the system. 
-Next, \pname{} employs the I/O-efficient ITF method to identify the important tokens within $R$, assuming a subset $R_{\text{important}}$ is identified (\cref{sec:techa}). 
-If KVs in $R_{\text{important}}$ are not in GPU memory, they are retrieved from lower memory tiers. 
-During this process, \pname{} employs layer-aware prefetching to speculatively load the next layer's KVs effectively overlapping I/Os with computation (\cref{sec:technew}).
-Crucially, upon verification, any KVs that were speculatively prefetched but identified as unimportant are strictly discarded from the runtime buffer to maintain resource efficiency.
-Consequently, only the loaded $R_{\text{important}}$, the tokens $NR$, and the query tokens $[t^q_0, t^q_1, ..., t^q_{n-1}]$ are sent into the LLM model, completing the remaining computations in the prefill phase. 
-Essentially, $R_{\text{important}}$ plus $NR$ becomes the de facto prefix used in the LLM inference. 
-Finally, the newly generated KVs for the prefix tokens in $NR$ are stored on disk, and the prefix tokens in $NR$ are inserted into the radix tree for future reuse. 
-The decoding phase remains unchanged, following existing systems~\cite{alluneed-nips17}.}
+\noindent
+\zrdnew{\noindent \textbf{Dataflow of \pname{}.} 
+	When an inference request arrives, \pname{} executes the following pipeline to process the prefix and generate the response.
+	First, the system queries the radix tree to retrieve the longest cached prefix data (stored in GPU, CPU, or disk) that matches the current request~\cite{sglang-arxiv23, chunkattention-arxiv24}.
+	Instead of retrieving all data upfront, \pname{} processes the matched prefix in a layer-wise pipeline.
+	For the current layer, it employs the similarity-guided identification method (\S\ref{sec:techa}) to filter out unimportant tokens.
+	Crucially, to mask I/O latency, this process executes concurrently with computation: during the GPU computation of the current layer, the layer-aware prefetcher (\S\ref{sec:technew}) speculatively loads the essential KVs for the next layer from lower storage tiers.
+	This effectively hides the I/O latency behind the GPU computation.
+	Any speculatively loaded KVs that are later verified as unimportant are discarded to save memory.
+	After processing the prefix, the system computes the remaining non-prefix tokens and enters the standard decoding phase~\cite{alluneed-nips17}.
+	Finally, the newly generated KVs are managed by the KV placement module (\S\ref{sec:techb}) and asynchronously persisted to disk for future reuse.}
+%\noindent \textbf{Dataflow of \pname{}.} 
+%\zrdnew{Assume that a request $S=[t^p_0, t^p_1, ..., t^p_{m-1}, t^q_0, t^q_1, ..., t^q_{n-1}]$ arrives. 
+%$m$ is the number of tokens in the prefix and $n$ is the number of tokens in the query. 
+%$t^p$ and $t^q$ denote the prefix and non-prefix tokens, respectively. 
+%First, given the request, \pname{} searches the radix tree to find the longest common prefix subsequence from all previous requests~\cite{sglang-arxiv23, chunkattention-arxiv24}. 
+%Let's assume the result is $R = [t^p_0, t^p_1, ..., t^p_j]$, whose KVs are stored in GPU memory, CPU memory, or disk. 
+%There may also be some prefix tokens $NR = [t^p_{j+1}, ..., t^p_{m-1}]$ that are not in the radix tree, and therefore their KVs do not exist in the system. 
+%Next, \pname{} employs the I/O-efficient ITF method to identify the important tokens within $R$, assuming a subset $R_{\text{important}}$ is identified (\S\ref{sec:techa}). 
+%If KVs in $R_{\text{important}}$ are not in GPU memory, they are retrieved from lower memory tiers. 
+%During this process, \pname{} employs layer-aware prefetching to speculatively load the next layer's KVs, effectively overlapping I/Os with computation (\S\ref{sec:technew}).
+%Crucially, upon verification, any KVs that were speculatively prefetched but identified as unimportant are strictly discarded from the runtime buffer to maintain resource efficiency.
+%Consequently, only the loaded $R_{\text{important}}$, the tokens $NR$, and the query tokens $[t^q_0, t^q_1, ..., t^q_{n-1}]$ are sent into the LLM model, completing the remaining computations in the prefill phase. 
+%Essentially, $R_{\text{important}}$ plus $NR$ becomes the defacto prefix used in the LLM inference. 
+%Finally, the newly generated KVs for the prefix tokens in $NR$ are stored on disk, and the prefix tokens in $NR$ are inserted into the radix tree for future reuse. 
+%The decoding phase remains unchanged, following existing systems~\cite{alluneed-nips17}.}
 
 %Assume that a request $S=[t^p_0, t^p_1,...,t^p_{m-1}, t^q_0, t^q_1,...,t^q_{n-1}]$ arrives.
 %$m$ is the number of tokens in prefix and $n$ is the number of tokens in the query.
